# yyy

./: .gitignore  CLAUDE.md  README.md  flash.sh  sdkconfig.defaults
S3-CAM-Hub/: ARCHITECTURE.md  CMakeLists.txt  build.sh  logmon.sh  monitor.sh  partitions.csv  sdkconfig.defaults
S3-CAM-Hub/main/: CMakeLists.txt  app_main.c  idf_component.yml
S3-CAM-Hub/main/alarm/: alarm_engine.c
S3-CAM-Hub/main/cam/: cam_config.h  cam_driver.c  cam_pipeline.c  cam_pipeline.h  frame_pool.c  frame_pool.h
S3-CAM-Hub/main/net/: admin_panel.c  http_server.c  http_server.h  stream_handler.c  web_auth.c  wifi_manager.c  wifi_manager.h  ws_stream.c  ws_stream.h
S3-CAM-Hub/main/sensors/: aht20.h  i2c_bus.h
S3-CAM-Hub/main/storage/: bist_logger.c  ext_flash.h
S3-CAM-Hub/main/system/: system_monitor.h  watchdog.c  watchdog.h
S3-CAM-Hub/main/telemetry/: telemetry_report.c  telemetry_report.h  web_reporter.h
S3-CAM-Hub/main/vision/: motion_detect.c  motion_detect.h
boards/: ov3660_s3_n16r8.h
configs/boards/esp32/: s3_n16r8.env
configs/tools/: esp_idf.env
main/: CMakeLists.txt  Kconfig.projbuild
main/alarm/: alert_transport.h  gas_analyzer.h  telegram_transport.c  telegram_transport.h
main/cam/: cam_driver.h  cam_pipeline.c
main/display/: oled_display.c  oled_display.h
main/net/: admin_panel.c  stream_handler.h  web_auth.c  web_auth.h
main/sensors/: adc_bus.c  adc_bus.h  aht20.c  bmp280.c  bmp280.h  mq137.c  mq137.h  sensor_hub.c  veml7700.c  veml7700.h
main/storage/: ext_flash.c
main/system/: fault_handler.c  fault_handler.h
main/telemetry/: telemetry_report.h  web_reporter.c
main/vision/: classifier.c  classifier.h  motion_detect.c  roi_tracker.c  roi_tracker.h
scripts/common/: detect_board.sh  log.sh  paths.sh  usb.sh
scripts/env/: load_common.sh  load_esp.sh
scripts/targets/: esp32.sh
yy1/: .gitignore  README.md  build.sh  flash.sh  logmon.sh  monitor.sh  partitions.csv
yy1/main/: Kconfig.projbuild  idf_component.yml
yy1/main/alarm/: alarm_engine.c  alarm_engine.h  gas_analyzer.c
yy1/main/cam/: cam_config.h  cam_driver.c  frame_pool.h
yy1/main/net/: admin_panel.c  admin_panel.h  http_server.c  stream_handler.h  web_auth.c  web_auth.h  ws_stream.c
yy1/main/sensors/: i2c_bus.c  mq7.c  mq7.h  sensor_hub.h
yy1/main/storage/: bist_logger.h
yy1/main/system/: system_monitor.c
yy1/main/telemetry/: uart_reporter.c  uart_reporter.h
yy1/main/vision/: blob_finder.c  blob_finder.h  face_detect.cpp  face_detect.h  jpeg_dc.c  jpeg_dc.h  motion_detect.c
yy2/: ARCHITECTURE.md  CMakeLists.txt  README.md  VPN_REMOTE_ACCESS.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
yy2/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
yy2/main/net/: admin_panel.c  admin_panel.h  espnow_bridge.c  espnow_bridge.h  telegram_client.c  telegram_client.h  wifi_dual.c  wifi_dual.h
yy2/main/system/: rgb_led.c  rgb_led.h  scout_health.c  scout_health.h  sensor_registry.c  sensor_registry.h  status_reporter.c  status_reporter.h  watchdog.c  watchdog.h
